Changed sidebar menu

--- a/themes/hueman/_config.yml
+++ b/themes/hueman/_config.yml
@@ -24,12 +24,12 @@ customize:
 
 # Widgets
 widgets:
-    - recent_posts
+    # - recent_posts
     - category
-    - archive
-    - tag
+    # - archive
+    # - tag
     - tagcloud
-    - links
+    # - links
 
 # Search
 search:
