--- a/_config.yml
+++ b/_config.yml
@@ -79,3 +79,14 @@ theme: hueman
 deploy:
   type: git
   repo: https://github.com/jason0853/jason0853.github.io.git
+
+# sitemap auto generator
+sitemap:
+    path: sitemap.xml
+
+# rss feed generator
+feed:
+  type: atom
+  path: feed.xml
+  limit: false
+  hub:
